--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
     <link rel="stylesheet" href="./estilo.css">
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </head>
 <body background="./pato_fofo.jpg">
     <header>
@@ -72,6 +73,7 @@
         <p>Data de criação 24/05/2021</p>
         <p><a href="https://www.instagram.com/diaszinm/" target="_blank">Meu Instagram</a></p>
         <p></p>
+        <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="pt_BR" data-type="horizontal" data-theme="light" data-vanity="kaique-diaz-aa1055212"><a class="LI-simple-link" href='https://br.linkedin.com/in/kaique-diaz-aa1055212?trk=profile-badge'>Kaique Diaz</a></div>
     </footer>
     <script src="./script.js"></script>
 </body>
